<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_color_white_rounded_corners_accent_dot_border_no_padding"
    android:padding="@dimen/view_element_margin">

    <com.akshara.mathapp.view.FontTextView
        android:id='@+id/message'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/message_choose_avatar_source"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <com.akshara.mathapp.view.FontTextView
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_element_margin"
            android:background="@drawable/bg_color_accent_rounded_corners_dot_border_white"
            android:drawablePadding="@dimen/view_element_padding"
            android:drawableStart="@drawable/ic_image_white_24dp"
            android:gravity="center_vertical"
            android:text="@string/message_option_gallery"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <com.akshara.mathapp.view.FontTextView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_element_margin"
            android:layout_marginTop="@dimen/view_element_margin"
            android:background="@drawable/bg_color_accent_rounded_corners_dot_border_white"
            android:drawablePadding="@dimen/view_element_padding"
            android:drawableStart="@drawable/ic_photo_camera_white_24dp"
            android:gravity="center_vertical"
            android:text="@string/message_option_camera"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </LinearLayout>
</RelativeLayout>